fix phone layout alignment

--- a/css/blog.css
+++ b/css/blog.css
@@ -6,17 +6,16 @@ html {
 
 body {
   margin: 0;
+  width: 100%;
+  height: auto;
 }
 
 main {
   position: absolute;
-  top: 40px;
   left: 50%;
   transform: translateX(-50%);
-  width: 70vw;
+  width: 90vw;
   max-width: 612px;
-  margin-left: 55px;
-  margin-right: 5px;
   font-family: 'Sentient-Light', Helvetica;
   color: #1d2951;
   justify-content: center;
@@ -24,10 +23,11 @@ main {
 
 .top-bar {
   width: 100vw;
+  height: auto;
   position: fixed;
   z-index: 1;
-  background: linear-gradient(to bottom,
-  rgba(255, 255, 255, 1) 0%,
+  background: linear-gradient(to bottom right,
+  rgba(255, 255, 255, 1) 40%,
   rgba(255, 255, 255, 0.0) 100%
   );
 }
@@ -56,6 +56,7 @@ button:hover::after {
 
 #title {
   font-size: 48px;
+  padding-top: 5vh;
 }
 
 h1 {
@@ -108,8 +109,9 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, 0%);
+  width: 95vw;
   max-width: 556px;
-  padding: 14px 28px;
+  padding: 14px 0px;
 }
 
 .code-segment {
